k8s/apps/dummy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dummy-web
  namespace: dummy
  annotations:
    cert-manager.io/issuer: "acme"
spec:
  ingressClassName: nginx
  tls:
    -
      hosts:
        - dummy.home.tremoureux.fr
      secretName: dummy-cert
  rules:
  -
    host: dummy.home.tremoureux.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dummy-service
            port:
              number: 80
